github_data_collector/src/data/issue_comment/liexusong_php-beast.txt
![image](https://user-images.githubusercontent.com/15756940/71228448-19143580-231d-11ea-8698-b4cc870ba4fb.png)

```shell
/usr/local/src/php-beast-master/beast.c: In function 'cgi_compile_file':
/usr/local/src/php-beast-master/beast.c:660:20: error: 'ZEND_HANDLE_FD' undeclared (first use in this function)
     if (h->type == ZEND_HANDLE_FD) close(h->handle.fd);
                    ^
/usr/local/src/php-beast-master/beast.c:660:20: note: each undeclared identifier is reported only once for each function it appears in
/usr/local/src/php-beast-master/beast.c:660:51: error: 'union <anonymous>' has no member named 'fd'
     if (h->type == ZEND_HANDLE_FD) close(h->handle.fd);
                                                   ^
/usr/local/src/php-beast-master/beast.c:672:18: error: 'union <anonymous>' has no member named 'fd'
         h->handle.fd = default_file_handler->get_fd(default_file_handler);
                  ^
make: *** [beast.lo] Error 1
```
ä½œè€…ï¼Œä½ å¥½
     æˆ‘çš„ä»£ç åŸæ¥æ˜¯æœ‰æ•è·æœºåˆ¶çš„ï¼Œä½†æ˜¯åŠ å¯†ä¹‹åçš„ä»£ç æŠ¥é”™ä¹‹åå°±ä¼šå‡ºç°ä¹±ç ï¼Œè¯·é—®è¿™ä¸ªæ€ä¹ˆè§£å†³
centos7.6.1810
php7.0.33 
nginx1.17.1

ä½¿ç”¨äº†beastå…¨ç«™åŠ å¯†åï¼Œæ­£å¸¸é€šè¿‡å®¢æˆ·ç«¯è®¿é—®æ˜¯æ²¡æœ‰é—®é¢˜çš„ï¼Œä½†æ˜¯ï¼Œåœ¨æœåŠ¡å™¨ä¸Šé€šè¿‡crontabæ‰§è¡Œ.shè„šæœ¬ï¼Œé€šè¿‡.shè„šæœ¬å»è¿è¡Œphp index.php cron xxxxè¿™æ ·çš„ä»»åŠ¡çš„æ—¶å€™ï¼Œä¼šå‡ºç°cpuä½¿ç”¨ç‡é«˜çš„æƒ…å†µï¼Œè¯•è¿‡å¢åŠ size_cacheçš„å€¼ï¼Œå·²ç»åŠ åˆ°10000000ï¼Œè¿˜æ˜¯ä¸€æ ·çš„æ•ˆæœï¼Œå…³äºcliæ‰§è¡Œï¼Œæœ‰æ²¡æœ‰å•ç‹¬çš„è®¾ç½®åœ°æ–¹ï¼Œæˆ–è€…æ˜¯ä¸æ˜¯å“ªä¸ªåœ°æ–¹è®¾ç½®é”™è¯¯äº†ï¼Ÿ

ç›¸å…³å‚æ•°
extension=beast.so
[beast]
beast.log_file = "/tmp/beast.log"
beast.log_user = "www"
beast.log_level = "ERROR"
beast.enable = On
beast.cache_size = 10000000

éº»çƒ¦å¸®å¿™çœ‹ä¸‹ï¼Œè°¢è°¢

PHP7.1.33åŠ è½½æ‰©å±•åé¡µé¢æ— æ³•æ‰“å¼€æ˜¾ç¤ºï¼š

Fatal error: Unknown: Not allow execute normal PHP script in Unknown on line 0
/bin/sh /Applications/MAMP/htdocs/private/php-beast-master/libtool --mode=compile cc  -I. -I/Applications/MAMP/htdocs/private/php-beast-master -DPHP_ATOM_INC -I/Applications/MAMP/htdocs/private/php-beast-master/include -I/Applications/MAMP/htdocs/private/php-beast-master/main -I/Applications/MAMP/htdocs/private/php-beast-master -I/usr/include/php -I/usr/include/php/main -I/usr/include/php/TSRM -I/usr/include/php/Zend -I/usr/include/php/ext -I/usr/include/php/ext/date/lib  -DHAVE_CONFIG_H  -g -O2   -c /Applications/MAMP/htdocs/private/php-beast-master/beast.c -o beast.lo
mkdir .libs
 cc -I. -I/Applications/MAMP/htdocs/private/php-beast-master -DPHP_ATOM_INC -I/Applications/MAMP/htdocs/private/php-beast-master/include -I/Applications/MAMP/htdocs/private/php-beast-master/main -I/Applications/MAMP/htdocs/private/php-beast-master -I/usr/include/php -I/usr/include/php/main -I/usr/include/php/TSRM -I/usr/include/php/Zend -I/usr/include/php/ext -I/usr/include/php/ext/date/lib -DHAVE_CONFIG_H -g -O2 -c /Applications/MAMP/htdocs/private/php-beast-master/beast.c  -fno-common -DPIC -o .libs/beast.o
/Applications/MAMP/htdocs/private/php-beast-master/beast.c:34:10: fatal error: 'zend.h' file not found
#include "zend.h"
         ^~~~~~~~
1 error generated.
make: *** [beast.lo] Error 1

èƒ½å¸®å¿™çœ‹ä¸€ä¸‹å—ï¼Ÿ
![image](https://user-images.githubusercontent.com/15919471/66915091-c7181080-f04a-11e9-8840-62b2874e8d1d.png)

æµ‹è¯•PHP7.3ç¯å¢ƒå¯ä»¥è¿è¡Œï¼Œå‡çº§åˆ°PHP7.4åï¼Œç›´æ¥æŠ¥é”™äº†ã€‚
ç¯å¢ƒ
å®˜æ–¹dockeré•œåƒphp:7.4-rc-fpm
é”™è¯¯ä¿¡æ¯
> root@86ba035b627d:/usr/src/myapp/php-beast-master# make
/bin/bash /usr/src/myapp/php-beast-master/libtool --mode=compile cc  -I. -I/usr/src/myapp/php-beast-master -DPHP_ATOM_INC -I/usr/src/myapp/php-beast-master/include -I/usr/src/myapp/php-beast-master/main -I/usr/src/myapp/php-beast-master -I/usr/local/include/php -I/usr/local/include/php/main -I/usr/local/include/php/TSRM -I/usr/local/include/php/Zend -I/usr/local/include/php/ext -I/usr/local/include/php/ext/date/lib  -DHAVE_CONFIG_H  -g -O2   -c /usr/src/myapp/php-beast-master/beast.c -o beast.lo 
mkdir .libs
 cc -I. -I/usr/src/myapp/php-beast-master -DPHP_ATOM_INC -I/usr/src/myapp/php-beast-master/include -I/usr/src/myapp/php-beast-master/main -I/usr/src/myapp/php-beast-master -I/usr/local/include/php -I/usr/local/include/php/main -I/usr/local/include/php/TSRM -I/usr/local/include/php/Zend -I/usr/local/include/php/ext -I/usr/local/include/php/ext/date/lib -DHAVE_CONFIG_H -g -O2 -c /usr/src/myapp/php-beast-master/beast.c  -fPIC -DPIC -o .libs/beast.o
/usr/src/myapp/php-beast-master/beast.c: In function 'filter_code_comments':
/usr/src/myapp/php-beast-master/beast.c:198:5: warning: implicit declaration of function 'zend_strip'; did you mean 'zend_sort'? [-Wimplicit-function-declaration]
     zend_strip(TSRMLS_C);
     ^~~~~~~~~~
     zend_sort
/usr/src/myapp/php-beast-master/beast.c: In function 'cgi_compile_file':
/usr/src/myapp/php-beast-master/beast.c:660:20: error: 'ZEND_HANDLE_FD' undeclared (first use in this function); did you mean 'ZEND_HANDLE_FP'?
     if (h->type == ZEND_HANDLE_FD) close(h->handle.fd);
                    ^~~~~~~~~~~~~~
                    ZEND_HANDLE_FP
/usr/src/myapp/php-beast-master/beast.c:660:20: note: each undeclared identifier is reported only once for each function it appears in
/usr/src/myapp/php-beast-master/beast.c:660:52: error: 'union <anonymous>' has no member named 'fd'; did you mean 'fp'?
     if (h->type == ZEND_HANDLE_FD) close(h->handle.fd);
                                                    ^~
                                                    fp
/usr/src/myapp/php-beast-master/beast.c:672:19: error: 'union <anonymous>' has no member named 'fd'; did you mean 'fp'?
         h->handle.fd = default_file_handler->get_fd(default_file_handler);
                   ^~
                   fp
make: *** [Makefile:191: beast.lo] Error 1
PHPæ–‡ä»¶åŠ å¯†åå†…å®¹å¦‚ä¸‹
t?wç V?
f{Sçƒ¶?è“Œ??+]æ§@Cä¾…å¦?8æè¢‘X?æ–Œï£µå¬¬æšŸC?{R?_Kè‡®èœåœˆ>{ä¿€?çŠ‡qî‡¥.@å­›æ‚¯UCé‡¸éŸ­é½³8:.?^ 
S?:Å„çŠ‚é¡³)??è¯µîˆ¬?æµ¢æ»’aèŒå§Šç­›WB?h,ç£™ç‚˜G&æ»¶ä¸E2?Fé§
å¥¢Dé„•?nl)æ¦¸éˆ©å§??

PHPä»£ç æ‰§è¡Œåå‡ºç°å¦‚ä¸‹ä¹±ç ï¼Œä¸ç”¨beastæ‰©å±•ä¹Ÿæ˜¯è¿™æ ·
ï¿½ï¿½ï¿½`ï¿½ï¿½cï¿½ï¿½ï¿½ï¿½ï¿½hï¿½ï¿½ï¿½Eï¿½j0jSï¿½ï¿½(ktKf\ï¿½-ï¿½É°ï¿½Zï¿½hï¿½ï¿½4U=ï¿½:ï¿½eï¿½ï¿½ï¿½$ï¿½cXqjSï¿½ï¿½ï¿½ï¿½N\aï¿½gï¿½ï¿½6ï¿½cï¿½0ï¿½ KŞ‰ï¿½Zï¿½p*}6ï¿½gï¿½ï¿½ï¿½ï¿½ï¿½8ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½Øµsppï¿½ï¿½7D{uKï¿½ï¿½ï¿½ï¿½Uï¿½f5Y.n"ï¿½ï¿½ï¿½ï¿½A\ï¿½ï¿½Û¶Ê£Aï¿½ï¿½ï¿½d8ï¿½1ï¿½ï¿½ï¿½ï¿½v8ï¿½ï¿½b4cYï¿½lï¿½ï¿½ï¿½ï¿½ï¿½%ï¿½!QKï¿½ï¿½ÏØ‡fï¿½ï¿½Tï¿½Ş„ï¿½ï¿½ï¿½fï¿½ï¿½pï¿½Dİ´ï¿½ï¿½ï¿½ ï¿½ï¿½<6tRï¿½ï¿½ï¿½9ï¿½#5ï¿½ï¿½qï¿½ï¿½ï¿½;3ï¿½ï¿½$ï¿½ï¿½hï¿½Iï¿½ï¿½Znï¿½ï¿½ï¿½?[&Eï¿½ï¿½8Vï¿½ï¿½ï¿½Ö§ï¿½ï¿½\ï¿½Iï¿½Wï¿½lï¿½ï¿½ITï¿½Q5ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Jï¿½%fm ï¿½ï¿½ï¿½9ï¿½ï¿½&<ï¿½Gï¿½å»–Kï¿½ï¿½hï¿½ï¿½ï¿½*CPï¿½ï¿½hï¿½ï¿½ï¿½ï¿½zï¿½ï¿½w}ï¿½ï¿½jï¿½ï¿½ï¿½vZBï¿½ï¿½Sï¿½ï¿½vï¿½'ï¿½ï¿½ï¿½ï¿½h*ï¿½q$ï¿½ï¿½hï¿½ï¿½)ï¿½";	Q$^Hfï¿½ï¿½fï¿½Jï¿½Z!ï¿½EKLï¿½ï¿½jgï¿½ï¿½kï¿½aï¿½ï¿½ï¿½R ï¿½tï¿½@uï¿½Rï¿½ï¿½D)ï¿½5ï¿½6ï¿½Ğ¯ï¿½ï¿½ï¿½Ãœï¿½aÆˆï¿½ï¿½/Vï¿½ï¿½ï¿½ï¿½Dï¿½.>ï¿½ï¿½Iï¿½.ï¿½l?ï¿½w/\?VMï¿½ï¿½}ï¿½ï¿½ï¿½Tj0{|ï¿½Aï¿½ï¿½Lï¿½ï¿½ï¿½ï¿½ï¿½-ï¿½cpï¿½ï¿½ä¹¨ï¿½!-ï¿½ï¿½Ô¶ï¿½V:0c4Í¥Lï¿½ï¿½ï¿½~ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Qï¿½ï¿½uizï¿½ï¿½|Ş ï¿½ï¿½:ï¿½Yï¿½ nï¿½ï¿½ï¿½cwZHT?v[ï¿½ï¿½ï¿½ï¿½[I#ï¿½ï¿½ï¿½ï¿½ï¿½3ï¿½Ë’U8ï¿½epÂ€uï¿½pï¿½ï¿½~ï¿½ï¿½ï¿½ tï¿½(wï¿½ï¿½ Vï¿½ f{Sï¿½Pï¿½ï¿½xï¿½ ï¿½=+]ï¿½ï¿½@Cï¿½ï¿½pï¿½#8ï¿½ï¿½ĞŒXï¿½ï¿½ï¿½ï¿½ï¿½ç•°Cï¿½{Rï¿½-_Kï¿½UÂ‚È¦>{ï¿½Qï¿½ï¿½ï¿½qï¿½ï¿½.@ï¿½ï¿½ï¿½ï¿½UCï¿½Rï¿½ï¿½ï¿½y8:.ï¿½+^ Sï¿½#:ï¿½ï¿½ï¿½ï¿½ï¿½D)ï¿½5ï¿½6ï¿½Ğ¯ï¿½ï¿½ï¿½Ãœï¿½aÆˆï¿½É¸WBï¿½)h,ï¿½Şï¿½G&ï¿½Eï¿½ï¿½E2ï¿½Fï¿½ 


ä»£ç åŠ å¯†ç”¨æˆ·éœ€è¦åˆ†å‘ç»™å®¢æˆ·çš„è¯ï¼Œéœ€è¦åœ¨å®¢æˆ·æœºå™¨ä¸Šä¹Ÿå®‰è£…ç›¸åŒé…ç½®çš„æ‰©å±•ï¼Œæœ¬æœºç”Ÿæˆçš„soæ–‡ä»¶åº”è¯¥æ˜¯æ²¡æ³•ç›´æ¥ç»™å®¢æˆ·ä½¿ç”¨çš„ï¼Œå¦‚æœè¿™æ ·çš„è¯éœ€è¦ç™»å½•å¯¹æ–¹æœºå™¨ç¼–è¯‘å®‰è£…æ‰©å±•ï¼Œå¹¶ä¸”åˆ é™¤æ‰©å±•æºæ–‡ä»¶ï¼Œé˜²æ­¢åŠ å¯†keyæ³„éœ²ï¼Œè¿™æ ·ä¼šä¸ä¼šå­˜åœ¨æ“ä½œä¸Šçš„éš¾åº¦ï¼Œæ¯•ç«Ÿå¯¹æ–¹å…¬å¸æœ‰æŠ€æœ¯äººå‘˜çš„æƒ…å†µä¸‹ç™»å½•åˆ«äººå®¶æœºå™¨ï¼Œä¼šæœ‰ä¿¡ä»»æ–¹é¢çš„é—®é¢˜å­˜åœ¨ã€‚è¯·é—®å¤§å®¶è¿˜æœ‰ä»€ä¹ˆæ›´å¥½çš„éƒ¨ç½²æ–¹å¼å—ï¼Ÿ